[gd_scene load_steps=16 format=3 uid="uid://cx5ur4di4l5at"]

[ext_resource type="Script" uid="uid://dh2iao4sjp4ff" path="res://Scripts/game_over.gd" id="1_5mu6e"]
[ext_resource type="Theme" uid="uid://bxa4pwb1xlx1s" path="res://Sprites/Themes/Menu.tres" id="2_8710x"]
[ext_resource type="Texture2D" uid="uid://b3t2r3qwlpiwr" path="res://Sprites/Particles/yupi.png" id="3_a14ly"]
[ext_resource type="FontFile" uid="uid://bi01jm3c5v1kq" path="res://Sprites/Themes/poco/Poco.ttf" id="4_tr7xh"]
[ext_resource type="Script" uid="uid://cj36nau0ud63c" path="res://Scripts/Button/yes_button.gd" id="5_w0gmt"]
[ext_resource type="Script" uid="uid://brhhsoussfjqr" path="res://Scripts/Button/no_button.gd" id="6_6wu1n"]
[ext_resource type="Script" uid="uid://ct8ymk6k3y1pk" path="res://Scripts/Button/wibblewobble.gd" id="7_aa261"]

[sub_resource type="Gradient" id="Gradient_hnfy4"]
offsets = PackedFloat32Array(0, 0.508197, 1)
colors = PackedColorArray(0.547496, 0.0703442, 0.412671, 1, 0.721569, 0.431373, 0.603922, 1, 0.795312, 0.630347, 0.97464, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0677l"]
gradient = SubResource("Gradient_hnfy4")
fill_from = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xj6ph"]
texture = SubResource("GradientTexture2D_0677l")
modulate_color = Color(0.735286, 0.832472, 0.98979, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_clofc"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(217.5, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
radial_velocity_min = -2.23517e-05
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, 123.615, 0)
linear_accel_min = 100.0
linear_accel_max = 100.0
scale_min = 0.2
scale_max = 0.5
color = Color(1, 1, 1, 0.768627)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_evg8o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0u5us"]

[sub_resource type="LabelSettings" id="LabelSettings_evg8o"]
font_size = 40
outline_size = 7

[sub_resource type="LabelSettings" id="LabelSettings_184ew"]
font_size = 20

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5mu6e")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8710x")
theme_override_styles/panel = SubResource("StyleBoxTexture_xj6ph")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(201, -35)
amount = 43
texture = ExtResource("3_a14ly")
lifetime = 3.74
preprocess = 6.28
process_material = SubResource("ParticleProcessMaterial_clofc")

[node name="NoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = 121.0
offset_right = 276.0
offset_bottom = 178.0
focus_neighbor_left = NodePath("../YesButton")
focus_neighbor_top = NodePath("../YesButton")
focus_neighbor_right = NodePath("../YesButton")
focus_neighbor_bottom = NodePath("../YesButton")
focus_next = NodePath("../YesButton")
focus_previous = NodePath("../YesButton")
theme = ExtResource("2_8710x")
theme_override_fonts/font = ExtResource("4_tr7xh")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_evg8o")
text = "NO"
flat = true
script = ExtResource("5_w0gmt")

[node name="ColorRect_No" type="ColorRect" parent="NoButton"]
layout_mode = 0
offset_left = 28.0
offset_top = 46.0
offset_right = 57.0
offset_bottom = 49.0

[node name="YesButton" type="Button" parent="."]
layout_mode = 0
offset_left = 119.0
offset_top = 127.0
offset_right = 192.0
offset_bottom = 171.0
focus_neighbor_left = NodePath("../NoButton")
focus_neighbor_top = NodePath("../NoButton")
focus_neighbor_right = NodePath("../NoButton")
focus_neighbor_bottom = NodePath("../NoButton")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../NoButton")
theme = ExtResource("2_8710x")
theme_override_fonts/font = ExtResource("4_tr7xh")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_0u5us")
text = "YES"
flat = true
alignment = 0
script = ExtResource("6_6wu1n")

[node name="ColorRect_Yes" type="ColorRect" parent="YesButton"]
layout_mode = 0
offset_left = 23.0
offset_top = 40.0
offset_right = 67.0
offset_bottom = 43.0

[node name="GameOverLabel" type="Label" parent="."]
modulate = Color(0.893064, 0.673025, 0.7678, 1)
layout_mode = 0
offset_left = -112.0
offset_top = 13.0
offset_right = 346.0
offset_bottom = 61.0
scale = Vector2(1.36, 1.36)
theme_override_fonts/font = ExtResource("4_tr7xh")
text = "GAME OVER"
label_settings = SubResource("LabelSettings_evg8o")
horizontal_alignment = 1

[node name="PlayAgainLabel" type="Label" parent="."]
modulate = Color(0.974462, 0.840731, 0.891762, 1)
layout_mode = 0
offset_left = -23.0
offset_top = 83.0
offset_right = 435.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("4_tr7xh")
text = "PLAY AGAIN ?"
label_settings = SubResource("LabelSettings_184ew")
horizontal_alignment = 1
script = ExtResource("7_aa261")

[connection signal="focus_entered" from="NoButton" to="NoButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="NoButton" to="NoButton" method="_on_focus_exited"]
[connection signal="pressed" from="NoButton" to="." method="_on_no_button_pressed"]
[connection signal="focus_entered" from="YesButton" to="YesButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="YesButton" to="YesButton" method="_on_focus_exited"]
[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
